[package]
name = "rs-linux-exporter"
version = "0.1.1"
edition = "2024"
description = "Linux monitoring exporter"
repository = "https://github.com/nuclearcat/rs-linux-exporter"
readme = "README.md"
license = "LGPL-2.1-or-later"
homepage = "https://github.com/nuclearcat/rs-linux-exporter"
keywords = ["prometheus", "exporter", "linux", "metrics", "monitoring"]
categories = ["system"]

[dependencies]
prometheus = "0.14"
procfs = "0.18"
rocket = "0.5.0"
libc = "0.2"
toml = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
ipnet = "2"
ipmi-rs = "0.5.0"

[dev-dependencies]
tempfile = "3"
